# rl-graph-bench

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
awesome/: README.md
blog/: 01-landscape.qmd  02-neurocut.qmd  03-community.qmd  04-dynamic.qmd  05-benchmark.qmd  06-results.qmd  _quarto.yml  index.qmd
dashboard/: app.py
docs/: BENCHMARK_ARCHITECTURE_REVIEW.md  CLARE_REIMPLEMENT.md  DESIGN.md  LAUNCH.md  MINDSTONE_2026-05-24.md  PAPER_TARGETS.md  REPRODUCTION_RULES.md  RESULTS_REPORT.md  project-page.md
docs/research/: task.md  (+15 more)
experiments/: eval_neurocut.py  eval_neurocut_citeseer.py  eval_ss2v_final.py  full_benchmark.py  run_academic_ablation.py  run_comprehensive_benchmark.py  run_conference_benchmarks.py  run_full_benchmark.py  run_inductive_benchmark.py  train_hybrid_mcts.py  train_hybrid_mpc.py  train_slrl_active.py  verify_ac2cd.py  verify_ac2cd_email.py  verify_clare_dblp.py  verify_clare_full.py  verify_clare_locator.py  verify_hybrid_mcmp.py  verify_neurocut_sparsest.py  verify_slrl.py  verify_slrl_dblp.py  verify_slrl_v2.py  verify_ss2v.py  verify_ss2v_paper.py  verify_wrt.py
results/: academic_coadaptation_ablation.csv  academic_extreme_generalization.csv  academic_sensitivity_grid.csv  benchmark_multicut.csv  benchmark_partition.csv  benchmark_v1.csv  benchmark_v1_summary.txt  comprehensive_benchmark.csv  comprehensive_benchmark_summary.md  eval_neurocut_mini5.csv  hybrid_multicut_comparison.md  inductive_benchmark.csv  inductive_benchmark_summary.md
rlgb/: __init__.py  cli.py
tests/: test_phase1_3.py  test_phase4_7.py  test_phase8_9.py
(+46 files in other folders)
