[build-system]
requires = ["setuptools>=68,<80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-graph-bench"
version = "0.1.0"
description = "Unified RL benchmark for graph clustering: partition · community · dynamic"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Core numerical / graph
    "numpy>=1.26",
    "scipy>=1.12",
    "networkx>=3.3",
    "igraph>=0.11",
    "leidenalg>=0.10",
    # ML
    "torch>=2.3",
    "torch_geometric>=2.6",
    # RL environment protocol
    "gymnasium>=0.29",
    # Clustering / evaluation
    "scikit-learn>=1.4",
    # Data wrangling / display
    "pandas>=2.2",
    "rich>=13.7",
    # Streamlit dashboard
    "streamlit>=1.35",
    "plotly>=5.22",
    # Config / CLI
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-xdist",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
rlgb = "rlgb.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["rlgb*", "dashboard*"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x -q"
